# use_xxtea

./: .gitignore  CMakeLists.txt  README.md
src/: decodeFiles.cpp  encryptFiles.cpp  xtteaFiles.cpp
